[package]
name = "numbers"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {git = "https://github.com/iced-rs/iced.git", branch = "master", default-features = false, features = ["advanced", "canvas", "debug", "lazy", "wgpu", "tokio", "image", "svg"] }
sipper = "0.1.0"
iced_runtime = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
iced_wgpu = "0.13.5"
png = "0.17.16"
rand = "0.9.1"
fast_image_resize = { version = "5.1.3", features = ["image"] }
image = "0.25.6"
tokio = "1.45.0"
